feat: add authentication